[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/OPPOSans-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/lobby/prepare_lobby.gd" type="Script" id=2]
[ext_resource path="res://ui/map/catan_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/lobby/player_seat.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="PrepareLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BgPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Option" type="VBoxContainer" parent="."]
anchor_left = 0.695833
anchor_top = 0.177778
anchor_right = 0.95625
anchor_bottom = 0.737037
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OptionScroll" type="ScrollContainer" parent="Option"]
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 500, 400 )

[node name="VCon" type="VBoxContainer" parent="Option/OptionScroll"]
margin_right = 500.0
margin_bottom = 372.0
size_flags_horizontal = 3
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="OptionLabel" type="Label" parent="Option/OptionScroll/VCon"]
margin_right = 500.0
margin_bottom = 32.0
text = "参数设置"
align = 1

[node name="PlayerNumContainer" type="HBoxContainer" parent="Option/OptionScroll/VCon"]
margin_top = 62.0
margin_right = 500.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="Option/OptionScroll/VCon/PlayerNumContainer"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 35.0
hint_tooltip = "参加游戏的人数范围"
mouse_filter = 0
size_flags_horizontal = 3
text = "玩家人数: "
align = 1

[node name="Btn" type="OptionButton" parent="Option/OptionScroll/VCon/PlayerNumContainer"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "选择人数"
align = 1

[node name="FogContainer" type="HBoxContainer" parent="Option/OptionScroll/VCon"]
margin_top = 130.0
margin_right = 500.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="Option/OptionScroll/VCon/FogContainer"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 35.0
hint_tooltip = "开启迷雾后在初始阶段无法看到每个地块上的点数"
mouse_filter = 0
size_flags_horizontal = 3
text = "地图迷雾: "
align = 1

[node name="Btn" type="OptionButton" parent="Option/OptionScroll/VCon/FogContainer"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "关闭"
align = 1

[node name="RandResourceContainer" type="HBoxContainer" parent="Option/OptionScroll/VCon"]
margin_top = 198.0
margin_right = 500.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="Option/OptionScroll/VCon/RandResourceContainer"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 35.0
hint_tooltip = "随机两种资源地块的数量会更少"
mouse_filter = 0
size_flags_horizontal = 3
text = "随机资源:"
align = 1

[node name="Btn" type="OptionButton" parent="Option/OptionScroll/VCon/RandResourceContainer"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "关闭"
align = 1

[node name="RandSeatContainer" type="HBoxContainer" parent="Option/OptionScroll/VCon"]
margin_top = 266.0
margin_right = 500.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="Option/OptionScroll/VCon/RandSeatContainer"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 35.0
hint_tooltip = "所有玩家将以随机的顺序开始游戏"
mouse_filter = 0
size_flags_horizontal = 3
text = "随机顺序:"
align = 1

[node name="Btn" type="OptionButton" parent="Option/OptionScroll/VCon/RandSeatContainer"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "关闭"
align = 1

[node name="RandLandContainer" type="HBoxContainer" parent="Option/OptionScroll/VCon"]
margin_top = 334.0
margin_right = 500.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="Option/OptionScroll/VCon/RandLandContainer"]
margin_top = 3.0
margin_right = 165.0
margin_bottom = 35.0
hint_tooltip = "地形不在以紧密排列的形式分布"
mouse_filter = 0
size_flags_horizontal = 3
text = "随机地形:"
align = 1

[node name="Btn" type="OptionButton" parent="Option/OptionScroll/VCon/RandLandContainer"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "关闭"
align = 1

[node name="SpecialOptionScroll" type="ScrollContainer" parent="Option"]
margin_top = 404.0
margin_right = 500.0
margin_bottom = 604.0
rect_min_size = Vector2( 500, 200 )

[node name="VCon" type="VBoxContainer" parent="Option/SpecialOptionScroll"]
margin_right = 500.0
margin_bottom = 156.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="OptionLabel" type="Label" parent="Option/SpecialOptionScroll/VCon"]
modulate = Color( 0.992157, 0.839216, 0.00392157, 1 )
margin_right = 500.0
margin_bottom = 32.0
text = "特殊参数"
align = 1

[node name="InitialRes" type="HBoxContainer" parent="Option/SpecialOptionScroll/VCon"]
margin_top = 52.0
margin_right = 500.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="Option/SpecialOptionScroll/VCon/InitialRes"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 37.0
hint_tooltip = "每个玩家的初始资源数量"
mouse_filter = 0
size_flags_horizontal = 3
text = "初始资源:"
align = 1

[node name="Edit" type="SpinBox" parent="Option/SpecialOptionScroll/VCon/InitialRes"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 10.0
align = 1

[node name="Overlay" type="Control" parent="Option/SpecialOptionScroll/VCon/InitialRes/Edit"]
anchor_left = 0.28852
anchor_top = 0.0238095
anchor_right = 0.675227
anchor_bottom = 0.97619

[node name="InitialVP" type="HBoxContainer" parent="Option/SpecialOptionScroll/VCon"]
margin_top = 114.0
margin_right = 500.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="Option/SpecialOptionScroll/VCon/InitialVP"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 37.0
hint_tooltip = "每个玩家的开始胜利点数"
mouse_filter = 0
size_flags_horizontal = 3
text = "初始胜点:"
align = 1

[node name="Edit" type="SpinBox" parent="Option/SpecialOptionScroll/VCon/InitialVP"]
margin_left = 169.0
margin_right = 500.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 10.0
rounded = true
align = 1

[node name="Overlay" type="Control" parent="Option/SpecialOptionScroll/VCon/InitialVP/Edit"]
anchor_left = 0.287009
anchor_top = 0.0238095
anchor_right = 0.673716
anchor_bottom = 0.97619

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.0740741
margin_bottom = -49.0
custom_fonts/font = SubResource( 2 )
text = "准备大厅"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitButton" type="Button" parent="."]
anchor_top = 0.911111
anchor_right = 0.208333
anchor_bottom = 1.0
text = "退出"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.791667
anchor_top = 0.911111
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
text = "开始"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BroadcastTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "定时广播大厅信息"
}

[node name="PlayerBg" type="ColorRect" parent="."]
anchor_left = 0.075
anchor_top = 0.177778
anchor_right = 0.25
anchor_bottom = 0.733333
color = Color( 0.196078, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="PlayerListLabel" type="Label" parent="PlayerBg"]
anchor_right = 1.0
margin_bottom = 40.0
text = "玩家列表"
align = 1

[node name="PlayerContainer" type="VBoxContainer" parent="PlayerBg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 56.0
custom_constants/separation = 10

[node name="PlayerSeat" parent="." instance=ExtResource( 10 )]
anchor_left = 0.0125
anchor_top = -0.0518519
anchor_right = 0.433333
anchor_bottom = 0.703704
margin_left = 584.0
margin_top = 248.0
margin_right = 376.0
margin_bottom = 32.0
mouse_filter = 1

[node name="PreviewBtn" type="Button" parent="PlayerSeat"]
anchor_left = 0.44
anchor_top = 0.461667
anchor_right = 0.56
anchor_bottom = 0.538333
text = "预览"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CatanMap" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="item_selected" from="Option/OptionScroll/VCon/PlayerNumContainer/Btn" to="." method="_on_change_num"]
[connection signal="item_selected" from="Option/OptionScroll/VCon/FogContainer/Btn" to="." method="_on_change_fog"]
[connection signal="item_selected" from="Option/OptionScroll/VCon/RandResourceContainer/Btn" to="." method="_on_change_resource"]
[connection signal="item_selected" from="Option/OptionScroll/VCon/RandSeatContainer/Btn" to="." method="_on_change_order"]
[connection signal="item_selected" from="Option/OptionScroll/VCon/RandLandContainer/Btn" to="." method="_on_change_land"]
[connection signal="value_changed" from="Option/SpecialOptionScroll/VCon/InitialRes/Edit" to="." method="_on_res_value_changed"]
[connection signal="value_changed" from="Option/SpecialOptionScroll/VCon/InitialVP/Edit" to="." method="_on_vp_value_changed"]
[connection signal="button_down" from="ExitButton" to="." method="_on_exit_prepare"]
[connection signal="button_down" from="StartBtn" to="." method="_on_start_game"]
[connection signal="timeout" from="BroadcastTimer" to="." method="_on_broadcast"]
[connection signal="button_down" from="PlayerSeat/PreviewBtn" to="." method="_on_preview_map"]
